# ai-life-companion

./: .editorconfig  .gitignore  Makefile  README.md  body.json  render.yaml
api/: Dockerfile  Dockerfile.beat  Dockerfile.worker  alembic.ini  celerybeat-schedule  pyproject.toml  sample.env
api/alembic/: env.py
api/alembic/versions/: 20241015_01_create_core_tables.py  20241015_02_add_api_keys_and_session_ts.py  20241015_03_add_failed_jobs_and_reminder_fields.py  20241015_04_add_google_refresh_token.py  20241015_05_add_stripe_fields.py  20241015_06_add_metrics_tables.py  20241016_07_add_reminder_audit_fields.py  20241016_08_add_memory_index.py  20241016_09_add_reminder_calendar_event.py  20241016_10_create_feature_flags.py
api/app/: __init__.py  celery_app.py  logging.py  main.py  settings.py
api/app/api/: agenda.py  billing.py  dependencies.py  deps.py  memory.py  stt.py  users.py
api/app/api/routers/: admin.py  calendar.py  chat.py  health.py  oauth.py  (+2 more)
api/app/db/: __init__.py  models.py  session.py
api/app/scripts/: __init__.py  mock_chat.py  seed.py
api/app/security/: api_keys.py  encryption.py
api/app/services/: __init__.py  billing_service.py  calendar_service.py  chat_orchestrator.py  embedding_service.py  feature_flags.py  memory_service.py  metrics_service.py  rate_limiter.py  safety.py
api/app/tasks/: analytics.py  reminders.py
api/app/utils/: datetime.py
api/tests/: conftest.py  test_agenda.py  test_billing.py  test_chat.py  test_encryption.py  test_health.py  test_memory_service.py  test_reminders.py  test_safety.py  test_time_parsing.py
(+40 files in other folders)
